@@ -489,7 +489,7 @@ class TestGridCAD < Test::Unit::TestCase
  end
 
  def threeSurfaceTriangles( x=1, y=1)
-  grid = Grid.new(5,0,3,0)
+  grid = Grid.new(5,1,3,0)
   grid.addNode(0,0,0)
   grid.addNode(1,0,0)
   grid.addNode(0,1,0)
@@ -499,6 +499,7 @@ class TestGridCAD < Test::Unit::TestCase
   grid.addFace(1,2,3,faceId)
   grid.addFace(2,0,3,faceId)
   4.times { |node| grid.projectNodeToFace(node,faceId) }
+  grid.addCell(0,1,2,3) # needed for gridAverageEdgeLength in Simplex
   grid # note ruby retruns result of last line if return is missing
  end
 
@@ -507,6 +508,14 @@ class TestGridCAD < Test::Unit::TestCase
   tol = 1.0e-15
   area = -0.5
   assert_in_delta area, grid.minFaceAreaUV(3), tol
+ end
+
+ def testSmoothFaceAreaInParameterSpaceForNode
+  grid = threeSurfaceTriangles
+  tol = 1.0e-7
+  optimalArea = 0.5/3.0
+  assert grid, grid.smoothNodeFaceAreaUV(3)
+  assert_in_delta optimalArea, grid.minFaceAreaUV(3), tol
  end
 
 end
