@@ -1,8 +1,16 @@
+2004-07-31 13:36 Bill Jones <w.t.jones@larc.nasa.gov>
+
+	* src/gridcad.c (gridSmoothNodeFaceAreaUV) general routine for
+	modifying node location for improving small (negative) face area
+	in UV parameters. (only calls gridSmoothNodeFaceAreaUVSimplex now)
+	* src/gridcad.c (gridSmoothNodeFaceAreaUVSimplex) Simplex optimization
+	for improving small (negative) face area in UV parameters.
+	
 2004-09-02 17:05 Bill Jones <w.t.jones@larc.nasa.gov>
 
 	* src/gridcad.c (gridMinFaceAreaUV) added to compute min face area
 	in UV space around a node.
-x	
+	
 2004-09-02 16:35 Bill Jones <w.t.jones@larc.nasa.gov>
 
 	* src/gridcad.c (gridFaceAreaUV) added to compute face area in UV
